connect_therapy/static/connect_therapy/css/index.css
.carousel-item img {
    /* height: 60%;
     vertical-align: center;
     margin: auto;
     width: 80%;
     padding: 10px;*/

    /*margin: auto;
    vertical-align: center;
    width: auto;
  max-width: 100%;
    height: 70%;*/

    width: 100%;
    height: 100%;
    display: block;
    align-content: center;

}

.carousel-item {
    width: 100%;
    height: 100%;

}

.carousel-inner .item1 img {

    position: relative;

}

.item1 .carousel-item .sign-up {
    position: absolute;
    vertical-align: center;
}

.caption h3 {
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #FFFFFF;
    text-decoration: underline;
    text-decoration-color: red;
    font-family: "DIN Condensed";
    font-size: 50px;
}

.caption2 {
    position: absolute;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #FFFFFF;
    font-size: 310%;
}

.carousel-control-next-icon {
    height: 50px;
    width: 100px;
    margin-top: 50%;
    margin-right: 15%;

}

.carousel-control-prev-icon {
    height: 50px;
    width: 200px;
    margin-top: 50%;
    margin-left: 15%;

}

.text {
    padding-left: 50px;
    padding-top: 50px;
}

.text p {
    padding-top: 10px;
}

.title {
    color: #f7a72e;
    font-family: Cuprum-Bold;
}

.clinic img {

    max-width: 15%;
    max-height: 25%;
    position: absolute;
    top: 0;
    bottom: 50%;
    left: 0;
    right: 0;
    margin: auto;
}

.patient img {

    max-width: 15%;
    max-height: 25%;
    position: absolute;

}

.
.clinician {
    width: 50px;
    height: 50px;
    position: absolute;
    left: 70px;
}

.clinician-quote {
    position: absolute;
    top: 0;
    bottom: 55%;
    left: 0;
    right: 0;
    margin: auto;
    text-align: center;
    top: 57%;
    z-index: 1;
    color: #FFFFFF;
    padding-right: 170px;
    padding-left: 170px;
}

.patient-block img {

    width: 200px;
    height: 200px;
    position: absolute;
    top: 0;
    bottom: 50%;
    left: 0;
    right: 70%;
    margin: auto;
}

.patient-quote {
    position: absolute;
    top: 0;
    bottom: 55%;
    left: 25%;
    right: 0;
    margin: auto;
    top: 15%;
    z-index: 1;
    color: #FFFFFF;

}

<!--
-->

.feature-content {

    padding: 8rem 0;
    overflow: hidden;

}

.feature-content img {

    margin-bottom: -8rem;
    float: right;

}

.feature-dark {

    background: #262f36;
    color: white;

}

.feature-dark h2 {

    color: white;

}

.sign-up {

    align-content: center;

}

@media screen and (min-width: 991px) {

    target .feature-content .row {

        display: flex;
        align-items: right;

    }

}

.feature-one row {

    align-items: right;

}

#feature-image {
    float: right;
    padding-left: 100px;
}

/* Stuff added to test image-button */

.container {
    position: relative;
    width: 50%;
}

/* Make the image responsive */
.container img {
    width: 100%;
    height: auto;
    top: 0;
    bottom: 50%;
    left: 0;
    right: 0;
    margin: auto;
}

/* Style the button and place it in the middle of the container/image */
.container .btn {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    background-color: #555;
    color: white;
    font-size: 16px;
    padding: 12px 24px;
    border: none;
    cursor: pointer;
    border-radius: 5px;
}

.container .btn:hover {
    background-color: black;
}

